src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail35.jova


class Test{
    public bool func(String x, int y){

        return false;
    }
    public bool func(String a, int b){

        return true;
    }
}